--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -32,40 +32,59 @@ header {
 .text {
 	color: seashell;
 }
+.black-background {
+	background-color: black;
+}
+.headliner { /*ISSUE 1*/
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: inherit;
+}
 
-/*Master Container*/
+/*Containers*/
 #master-container {
 	display: flex;
 	margin-top: 70px;
 	flex-direction: column;
 	width: 1200px;
-	justify-content: center;
+	align-items: center;
 }
+
 #top-container {
 	background-image: url(../images/img-mission-background.jpg);
-	display: inherit;
+	display: flex;
 	width: inherit;
 	height: 700px;
+	justify-content: center;
+	align-items: center;
 }
 #middle-container {
-	display: inherit;
+	display: flex;
 	width: 1000px;
 	justify-content: center;
 }
-.headliner {
-	justify-content: center;
-}
+
 #bottom-container {
 	background-image: url(../images/img-locations-background.jpg);
-	display: inherit;
+	display: flex;
 	width: inherit;
 	height: 500px;
 }
-#contacts-container {
-	display: inherit;
+
+/*Contacts*/
+#contacts-container { /*ISSUE 2*/
+	display: flex;
+	flex-direction: column;
 	height: 200px;
+	align-items: center;
 }
-#copyright-container {
+
+/*COPYTIGHT*/
+#copyright-container { /*ISSUE 3*/
+	display: flex;
+	width: inherit;
+	justify-content: flex-start;
 }
 
 /*testing properties*/
@@ -75,8 +94,13 @@ header {
 .test {
 	color: white;
 
+/*	ISSUES
+ISSUE 1: padding of .headliners: how do remove excess top and bottom padding?;
+ISSUE 2: element top-bottom padding (or spacing) causes the phone number to exceed the bounds set forth in the redline specs: how do I fit all 'Contacts' elements witin the bounds of height: 200px?;
+ISSUE 3: the left margin of the copyright container (REDLINE SPECIFIES 20px) causes its container to protrude from the master container: how do I keep the 'Copyright' container within the bounds of the 'master' container?;
+*/
 
-/*
+/*	NOTES
 NOTE 1: remove gaps around screen;
 NOTE 2: properly arrange header items;
 NOTE 3: by using flex-direction column, justify content and align-items switch identity;
