--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -29,17 +29,19 @@ header {
 	color: seashell;
 }
 .black-background {
-	background-color: black;
+	
 }
 .headliner { /*ISSUE 1*/
 	display: flex;
 	flex-direction: column;
+	background-color: black;
 	align-items: center;
 	width: inherit;
 }
 .TOMimg {
 	width: 300px;
 	height: 200px;
+	margin: 10px;
 }
 
 
@@ -48,7 +50,7 @@ header {
 	display: flex;
 	flex-grow: 1;
 }
-#tea-cozy-logo {
+#logobox img {
 	height: 50px;
 	padding: 9.5px 10px;
 }
