--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -54,7 +54,7 @@ header {
 	width: 1200px;
 	align-items: center;
 }
-#top-container {
+#mission {
 	background-image: url(../images/img-mission-background.jpg);
 	display: flex;
 	width: inherit;
@@ -62,10 +62,10 @@ header {
 	justify-content: center;
 	align-items: center;
 }
-#top-container .headliner {
+#mission .headliner {
 	background-color: black;
 }
-#middle-container { /*ISSUE 4*/
+#steeping { /*ISSUE 4*/
 	display: flex;
 	/*height: 700px;*/ /*ISSUE 4 AND NOTE 5*/ 
 	width: 1000px;
@@ -85,7 +85,7 @@ header {
 	display: block;
 	text-align: center;
 }
-#bottom-container {
+#locations {
 	background-image: url(../images/img-locations-background.jpg);
 	display: flex;
 	width: inherit;
@@ -96,14 +96,14 @@ header {
 
 
 /*CONTACTS*/
-#contacts-container { /*ISSUE 2*/
+#contacts { /*ISSUE 2*/
 	display: flex;
 	flex-direction: column;
 	height: 200px;
 	align-items: center;
 }
 /*COPYRIGHT*/
-#copyright-container { /*ISSUE 3*/
+#copyright { /*ISSUE 3*/
 	display: flex;
 	width: inherit;
 	justify-content: flex-start;
