--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -83,11 +83,11 @@ header {
 	justify-content: center;
 	flex-wrap: wrap;
 }
-#teatypes {
+/*#teatypes {
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap; /*NOTE 6 AND ISSUE 5*/
-}
+
 .item img { /*NOTE 5*/
 	width: 300px;
 	height: 200px;
@@ -97,13 +97,23 @@ header {
 	display: block;
 	text-align: center;
 }
-#locations {
+#locations { /*NOTE 5*/
 	background-image: url(../images/img-locations-background.jpg);
 	display: flex;
 	width: inherit;
 	height: 500px;
 	justify-content: center;
-	align-items: center;
+/*	align-items: center;*/
+}
+.location { /*NOTE 5*/
+	opacity: 1.0; /*NOTE 5*/
+  padding: 10px; /*NOTE 5*/
+  margin: 5px 20px; /*NOTE 5*/
+  background-color: black; /*NOTE 5*/
+  flex-basis: 280px; /*NOTE 5*/
+  display: flex; /*NOTE 5*/
+  flex-direction: column; /*NOTE 5*/
+  justify-content: center; /*NOTE 5*/
 }
 
 
@@ -143,9 +153,7 @@ ISSUE 2: element top-bottom padding (or spacing) causes the phone number to exce
 
 ISSUE 3: the left margin of the copyright container (REDLINE SPECIFIES 20px) causes its container to protrude from the master container: how do I keep the 'Copyright' container within the bounds of the 'master' container?;
 
-ISSUE 4: I cannot get the items in middle-container to flex-wrap: wrap; so I am commenting out the height property as not doing so makes the items protrude from their container and distract from my further 
-
-ISSUE 5: WHAT IN THE HELL??? I am not sure what I've done, but somehow taking out id="teatypes" is just fine, but commenting out #teatypes from CSS causes my tea of the month to lose its property values.;
+ISSUE 4: I cannot get the items in middle-container to flex-wrap: wrap (solved); I am commenting out the height property as not doing so makes the items protrude from their container and distract from my further; I still cannot squeeze them into the height requirement.
 */
 
 
